--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,4 +17,10 @@
         android:name="com.example.assignment_1_study_app.ui.timer.TimerFragment"
         android:label="@string/menu_timer"
         tools:layout="@layout/fragment_timer" />
+
+    <fragment
+        android:id="@+id/nav_notes"
+        android:name="com.example.assignment_1_study_app.ui.notes.NotesFragment"
+        android:label="@string/menu_notes"
+        tools:layout="@layout/fragment_notes" />
 </navigation>
