--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@android:drawable/ic_menu_sort_by_size"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_timer"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@android:drawable/ic_menu_recent_history"
             android:title="@string/menu_timer" />
         <item
             android:id="@+id/nav_notes"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@android:drawable/ic_menu_edit"
             android:title="@string/menu_notes" />
     </group>
 </menu>
