--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,57 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.09" />
+
+    <Button
+        android:id="@+id/btnShortcutTimer"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="53dp"
+        android:text="Study with Pomodoro Timer"
+        app:layout_constraintTop_toBottomOf="@+id/text_home"
+        tools:layout_editor_absoluteX="12dp" />
+
+    <Button
+        android:id="@+id/btnShortcutNotes"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="10dp"
+        android:text="Write a Note"
+        app:layout_constraintTop_toBottomOf="@+id/btnShortcutTimer"
+        tools:layout_editor_absoluteX="10dp" />
+
+    <Button
+        android:id="@+id/btnShortcutFlashcards"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="10dp"
+        android:text="Practice Flashcards"
+        app:layout_constraintTop_toBottomOf="@+id/btnShortcutNotes"
+        tools:layout_editor_absoluteX="10dp"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/btnShortcutTodo"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="10dp"
+        android:text="View ToDo items"
+        app:layout_constraintTop_toBottomOf="@+id/btnShortcutFlashcards"
+        tools:layout_editor_absoluteX="16dp"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/btnShortcutScheduler"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="10dp"
+        android:text="Check Schedule"
+        app:layout_constraintTop_toBottomOf="@+id/btnShortcutTodo"
+        tools:layout_editor_absoluteX="11dp"
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
