--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -38,4 +38,16 @@
             app:argType="string"
             android:defaultValue="Untitled" />
     </fragment>
+
+    <fragment
+        android:id="@id/nav_flashcards"
+        android:name="com.example.assignment_1_study_app.ui.flashcards.FlashCardsFragment"
+        android:label="@string/menu_flashcards"
+        tools:layout="@layout/fragment_flashcards" />
+
+    <fragment
+        android:id="@id/nav_todo"
+        android:name="com.example.assignment_1_study_app.ui.todo.TodoFragment"
+        android:label="@string/menu_todo"
+        tools:layout="@layout/fragment_todo" />
 </navigation>
