--- a/app/src/main/res/layout/fragment_flashcards.xml
+++ b/app/src/main/res/layout/fragment_flashcards.xml
@@ -5,9 +5,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.flashcards.FlashCardsFragment">
 
-    <Button
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_flashcards_deck"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:clickable="true">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="20dp"
+        android:id="@+id/fabAddDeck"
+        android:src="@android:drawable/ic_menu_add" />
 
 </RelativeLayout>
