--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,7 +17,7 @@
             android:icon="@android:drawable/ic_menu_edit"
             android:title="@string/menu_notes" />
         <item
-            android:id="@+id/nav_flashcards"
+            android:id="@+id/nav_decks"
             android:icon="@android:drawable/ic_menu_add"
             android:title="@string/menu_flashcards" />
         <item
