--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@android:drawable/ic_menu_sort_by_size"
+            android:icon="@android:drawable/ic_menu_myplaces"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_timer"
@@ -18,11 +18,15 @@
             android:title="@string/menu_notes" />
         <item
             android:id="@+id/nav_decks"
-            android:icon="@android:drawable/ic_menu_add"
+            android:icon="@android:drawable/menu_frame"
             android:title="@string/menu_flashcards" />
         <item
             android:id="@+id/nav_todo"
-            android:icon="@android:drawable/ic_menu_add"
+            android:icon="@android:drawable/ic_menu_sort_by_size"
             android:title="@string/menu_todo" />
+        <item
+            android:id="@+id/nav_timetable"
+            android:icon="@android:drawable/ic_menu_my_calendar"
+            android:title="@string/menu_timetable" />
     </group>
 </menu>
